Added Item Recommendation Feature

--- a/ml-100k-example.ipynb
+++ b/ml-100k-example.ipynb
@@ -12,32 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/srijan/anaconda3/envs/fyp_caserec/lib/python3.8/site-packages/caserec/utils/split_database.py:97: FutureWarning: \n",
-      ".ix is deprecated. Please use\n",
-      ".loc for label based indexing or\n",
-      ".iloc for positional indexing\n",
-      "\n",
-      "See the documentation here:\n",
-      "http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#ix-indexer-is-deprecated\n",
-      "  df_train = self.df.ix[train_index]\n",
-      "/home/srijan/anaconda3/envs/fyp_caserec/lib/python3.8/site-packages/caserec/utils/split_database.py:98: FutureWarning: \n",
-      ".ix is deprecated. Please use\n",
-      ".loc for label based indexing or\n",
-      ".iloc for positional indexing\n",
-      "\n",
-      "See the documentation here:\n",
-      "http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#ix-indexer-is-deprecated\n",
-      "  df_test = self.df.ix[test_index]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "myEstimator = AutoEstimator(\"../ml-latest-small/ratings_new.csv\", predictor='item', eval_metric='RMSE', algo='tpe', max_evals = 100, cross_validate=True, test_percentage=0.2,\n",
     "                 sep_read=\",\", sep_write=\"\\t\", n_splits=5, dir_folds = \"../ml-latest-small/\", header=1, names=[0,1,2])"
@@ -46,7 +23,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -189,13 +168,7 @@
       "Configuration:                                                            \n",
       "{'type': 'most_popular'}                                                  \n",
       "[Case Recommender: Rating Prediction > Most Popular]                      \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "train data:: 610 users and 8938 items (80668 interactions) | sparsity:: 98.52%\n",
       "test data:: 610 users and 5173 items (20168 interactions) | sparsity:: 99.36%\n",
       "\n",
