--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3425,7 +3425,14 @@
       "test data:: 1881 users and 6326 items (18567 interactions) | sparsity:: 99.84%                                         \n",
       "\n",
       "training_time:: 45.899077 sec                                                                                          \n",
-      " 64%|█████████████████████████▌              | 32/50 [9:38:28<9:15:09, 1850.50s/trial, best loss: -0.36545120000000003]"
+      "prediction_time:: 131.591665 sec                                                                                       \n",
+      "Split 0 Loss: 0.369268                                                                                                 \n",
+      "[Case Recommender: Item Recommendation > UserKNN Algorithm]                                                            \n",
+      "\n",
+      "train data:: 1892 users and 15442 items (74267 interactions) | sparsity:: 99.75%                                       \n",
+      "test data:: 1877 users and 6319 items (18567 interactions) | sparsity:: 99.84%                                         \n",
+      "\n",
+      " 64%|█████████████████████████▌              | 32/50 [9:40:49<9:15:09, 1850.50s/trial, best loss: -0.36545120000000003]"
      ]
     }
    ],
