--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3432,7 +3432,8 @@
       "train data:: 1892 users and 15442 items (74267 interactions) | sparsity:: 99.75%                                       \n",
       "test data:: 1877 users and 6319 items (18567 interactions) | sparsity:: 99.84%                                         \n",
       "\n",
-      " 64%|█████████████████████████▌              | 32/50 [9:40:49<9:15:09, 1850.50s/trial, best loss: -0.36545120000000003]"
+      "training_time:: 43.133076 sec                                                                                          \n",
+      " 64%|█████████████████████████▌              | 32/50 [9:41:32<9:15:09, 1850.50s/trial, best loss: -0.36545120000000003]"
      ]
     }
    ],
